{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 14,
  "lineage": "8a10a93c-7872-ba2e-4230-3dd921b78fec",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-11T00:21:33.660-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fp-regulation/global/firewalls/firewall-http",
            "log_config": [],
            "name": "firewall-http",
            "network": "https://www.googleapis.com/compute/v1/projects/fp-regulation/global/networks/fp-regulation-network",
            "priority": 1000,
            "project": "fp-regulation",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fp-regulation/global/firewalls/firewall-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-11T00:21:33.621-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fp-regulation/global/firewalls/firewall-https",
            "log_config": [],
            "name": "firewall-https",
            "network": "https://www.googleapis.com/compute/v1/projects/fp-regulation/global/networks/fp-regulation-network",
            "priority": 1000,
            "project": "fp-regulation",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fp-regulation/global/firewalls/firewall-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-11T00:21:34.150-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fp-regulation/global/firewalls/firewall-ssh",
            "log_config": [],
            "name": "firewall-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/fp-regulation/global/networks/fp-regulation-network",
            "priority": 1000,
            "project": "fp-regulation",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fp-regulation/global/firewalls/firewall-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "strapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1000-3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-11T00:21:33.532-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fp-regulation/global/firewalls/firewall-strapi",
            "log_config": [],
            "name": "firewall-strapi",
            "network": "https://www.googleapis.com/compute/v1/projects/fp-regulation/global/networks/fp-regulation-network",
            "priority": 1000,
            "project": "fp-regulation",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fp-regulation/global/firewalls/firewall-strapi",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/fp-regulation/global/networks/fp-regulation-network",
            "mtu": 0,
            "name": "fp-regulation-network",
            "project": "fp-regulation",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fp-regulation/global/networks/fp-regulation-network"
          }
        }
      ]
    }
  ]
}